# 2026wc-analytics

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: track.yml
data/processed/: backtest.csv  champion_timeline.csv  champion_tracker.csv  elo_ratings.csv  forecast.csv  goal_diff_forecast.csv  live_squads.csv  players_features.csv  players_real_features.csv  posterior_strength.csv  posterior_strength_real.csv  predictions_log.csv  simulation_real.csv  simulation_results.csv  team_features.csv  team_features_live.csv  team_features_real.csv  team_interpretation.csv  wc2026_players.csv  wc2026_team_assessment.csv  winners_track.csv
docs/: CHAMPION_TRACKER.md  DATA_PIPELINE.md  FORECAST_LOG.md  GOAL_DIFF_FORECAST.md  LIVE_PIPELINE.md  METHODOLOGY.md  R32_ODDS.md  WINNERS.md  XG_BACKTEST.md  analytics.md  data_pipeline_slides.md  data_pipeline_slides.pptx  data_pipeline_slides.tex  match_predictions.md  medium_goal_difference.md  medium_post.md  presentation_script.md
notebooks/: goal_difference_gaussian.ipynb
scripts/: 01_generate_data.py  02_build_features.py  03_fit_model.py  04_simulate_tournament.py  05_extract_real_players.py  06_fit_real.py  07_assess_mexico.py  10_elo.py  11_llm_judge.py  13_match_predictions.py  14_analytics.py  15_simulate_real.py  16_champion_tracker.py  19_evaluate.py  20_prediction_log.py  21_xg_backtest.py  22_fetch_statsbomb_xg.py  23_r32_odds.py  24_form_signal.py  27_build_player_dataset.py  28_predict_winners.py  29_champion_timeline.py  30_gaussian_goal_diff.py
tests/: test_smoke.py
(+20 files in other folders)
