[project]
name = "wc2026-analytics"
version = "0.1.0"
description = "World Cup 2026 player analytics and Bayesian winner prediction"
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
